--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+*, ::before, ::after {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: "Russo One", sans-serif !important;
+    font-weight: 100;
+    line-height: 3;
+}
+
+
+::-webkit-scrollbar {
+    width: 12px; /* Ancho de la barra de desplazamiento */
+}
+
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Color del fondo de la barra */
+}
+
+/* Estilo del thumb (la parte movible del scroll) */
+::-webkit-scrollbar-thumb {
+    background-color: black; /* Color del thumb */
+    border-radius: 6px; /* Bordes redondeados */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Color del thumb cuando está en hover */
+}
