--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -94,7 +94,7 @@ h2 {
 .hero video {
     width: 100%;
     object-fit: cover;
-    height: 600px;
+    height: 700px;
     opacity: 0.4;
     transition: 2s;
 }
@@ -105,8 +105,6 @@ h2 {
 
 .map iframe {
     width: 100%;
-    padding: 10px;
-    border-radius: 14px;
 }
 
 .consequences {
@@ -157,4 +155,62 @@ footer p {
     font-weight: lighter;
     margin: 0;
     text-align: center;
+}
+
+
+
+@media (max-width: 768px) {
+
+    /* Ajuste del header y nav */
+    header {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .icon {
+        width: 100px;
+        height: 60px;
+    }
+
+    header h1 {
+        font-size: 14px;
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    nav {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul li {
+        margin: 10px 0;
+    }
+
+    /* Ajuste del video de la sección hero */
+    .hero video {
+        height: auto;
+        max-height: 400px;
+    }
+
+    /* Ajuste de las imágenes en el grid */
+    .responsive-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .responsive-grid img {
+        height: auto;
+        max-height: 300px;
+    }
+
+    /* Ajuste del iframe de YouTube */
+    .video iframe {
+        height: 300px;
+    }
 }
